# python-static-typing-mypy

./: .gitignore  README.md  pyproject.toml
src/python_static_typing_mypy/: TipagemEstatica.py  main.py
tests/: test_tipagem_estatica.py
